syntax = "proto3";

option java_package = "com.game.fwork.proto";
option java_outer_classname = "GameProto";

option csharp_namespace = "GameClient.Proto";

// 消息类型枚举
enum MessageType {
  LOGIN = 0;              // 登录
  HEARTBEAT = 1;          // 心跳
  MATCH_REQUEST = 2;      // 请求匹配
  MATCH_CANCEL = 3;       // 取消匹配
  MATCH_SUCCESS = 4;      // 匹配成功（服务端推送）

  // ========== 战斗相关消息 ==========
  BATTLE_READY = 10;      // 战斗准备完成
  BATTLE_START = 11;      // 战斗开始（服务端推送）
  BATTLE_ACTION = 12;     // 战斗操作（客户端发送）
  BATTLE_UPDATE = 13;     // 战斗状态更新（服务端推送）
  BATTLE_END = 14;        // 战斗结束（服务端推送）
  BATTLE_SURRENDER = 15;  // 投降
  BATTLE_REJOIN = 16;     // 断线重连（客户端请求）
  BATTLE_REJOIN_RESPONSE = 17; // 重连响应（服务端推送）
}

// 通用消息包装器
message GameMessage {
  MessageType type = 1;
  string token = 2;           // JWT Token

  // 根据type字段，以下字段只有一个会被填充
  LoginRequest loginRequest = 3;
  Heartbeat heartbeat = 4;    // 修改为通用的Heartbeat消息，既可用于请求也可用于响应
  MatchRequest matchRequest = 5;

  // 战斗相关请求
  BattleReadyRequest battleReadyRequest = 10;
  BattleActionRequest battleActionRequest = 11;
  BattleSurrenderRequest battleSurrenderRequest = 12;
  BattleRejoinRequest battleRejoinRequest = 13;

  // 服务端响应
  LoginResponse loginResponse = 20;
  MatchSuccessResponse matchSuccessResponse = 21;
  BattleStartResponse battleStartResponse = 22;
  BattleUpdateResponse battleUpdateResponse = 23;
  BattleEndResponse battleEndResponse = 24;
  BattleRejoinResponse battleRejoinResponse = 25;

  // 心跳响应字段
  HeartbeatResponse heartbeatResponse = 30;
}

// ========== 基础消息 ==========

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
  int64 userId = 3;
  string token = 4;
}

// 心跳消息（双向通用）
message Heartbeat {
  int64 timestamp = 1;         // 时间戳
  int64 clientTime = 2;        // 客户端时间（请求时填充）
  int64 serverTime = 3;        // 服务器时间（响应时填充）
  int32 ping = 4;              // 延迟（响应时填充）
}

message MatchRequest {
  int64 userId = 1;
}

message MatchCancelRequest {
  int64 userId = 1;
}

message MatchSuccessResponse {
  string battleId = 1;
  PlayerInfo opponent = 2;
}

message PlayerInfo {
  int64 userId = 1;
  string nickname = 2;
  int32 eloRating = 3;
}

// ========== 心跳响应消息 ==========

/**
 * 心跳响应
 * 服务端收到心跳包后，回应此消息
 */
message HeartbeatResponse {
  int64 timestamp = 1;  // 服务端时间戳（毫秒）
}

// ========== 战斗相关消息 ==========

// 战斗准备请求（匹配成功后，客户端发送此消息表示已准备）
message BattleReadyRequest {
  string battleId = 1;
  int64 userId = 2;
}

// 战斗开始响应（双方都准备完成后，服务端推送）
message BattleStartResponse {
  string battleId = 1;
  BattlePlayerData player1 = 2;  // 玩家1数据
  BattlePlayerData player2 = 3;  // 玩家2数据
  int64 currentActorUserId = 4;  // 当前行动者（谁先手）
  int32 currentRound = 5;        // 当前回合（固定为1）
}

// 战斗中玩家的完整数据
message BattlePlayerData {
  int64 userId = 1;
  string nickname = 2;
  int32 maxHp = 3;
  int32 currentHp = 4;
  int32 attack = 5;
  int32 defense = 6;
  bool isAlive = 7;

  // 技能冷却Map（key=技能ID, value=剩余冷却回合数）
  map<int32, int32> cooldowns = 8;
}

// 战斗操作请求（客户端发送：我要使用XX技能）
message BattleActionRequest {
  string battleId = 1;
  int64 userId = 2;
  int32 actionType = 3; // 1=技能, 2=防御, 3=道具
  int32 paramId = 4;    // 技能ID 或 道具ID (防御时填0)
}

// 战斗状态更新响应（服务端推送：某玩家使用了技能，造成了伤害）
message BattleUpdateResponse {
  string battleId = 1;
  int32 currentRound = 2;
  int64 actorUserId = 3;          // 行动者ID
  int32 skillId = 4;              // 使用的技能ID
  string skillName = 5;           // 技能名称
  int64 targetUserId = 6;         // 目标玩家ID
  int32 damage = 7;               // 造成的伤害（0表示治疗）
  int32 heal = 8;                 // 恢复的生命（0表示攻击）

  // 更新后的双方状态
  BattlePlayerData player1 = 10;
  BattlePlayerData player2 = 11;

  int64 nextActorUserId = 12;     // 下一个行动者
  string description = 13;        // 操作描述（例如："玩家A对玩家B使用重击，造成120点伤害"）
}

// 战斗结束响应
message BattleEndResponse {
  string battleId = 1;
  int64 winnerId = 2;             // 胜利者ID
  int64 loserId = 3;              // 失败者ID
  string endReason = 4;           // 结束原因（"击败对手" / "对方投降"）
  int32 totalRounds = 5;          // 总回合数

  // 双方最终状态
  BattlePlayerData player1 = 10;
  BattlePlayerData player2 = 11;
}

// 投降请求
message BattleSurrenderRequest {
  string battleId = 1;
  int64 userId = 2;
}

// 断线重连请求
message BattleRejoinRequest {
  int64 userId = 1;  // 重连的玩家ID
}

// 断线重连响应
message BattleRejoinResponse {
  bool success = 1;
  string message = 2;

  // 如果成功，返回当前战斗快照
  string battleId = 3;
  int32 currentRound = 4;
  int64 currentActorUserId = 5;

  // 双方当前状态
  BattlePlayerData player1 = 10;
  BattlePlayerData player2 = 11;
}