package com.game.fwork.test;

import com.game.fwork.proto.GameProto.*;
import io.netty.bootstrap.Bootstrap;
import io.netty.channel.*;
import io.netty.channel.nio.NioEventLoopGroup;
import io.netty.channel.socket.SocketChannel;
import io.netty.channel.socket.nio.NioSocketChannel;
import io.netty.handler.codec.protobuf.ProtobufDecoder;
import io.netty.handler.codec.protobuf.ProtobufEncoder;
import io.netty.handler.codec.protobuf.ProtobufVarint32FrameDecoder;
import io.netty.handler.codec.protobuf.ProtobufVarint32LengthFieldPrepender;

import java.util.Scanner;
import java.util.concurrent.Executors;
import java.util.concurrent.ScheduledExecutorService;
import java.util.concurrent.TimeUnit;
import java.util.concurrent.atomic.AtomicBoolean;
import java.util.concurrent.atomic.AtomicInteger;

/**
 * æˆ˜æ–—ç³»ç»Ÿæµ‹è¯•å®¢æˆ·ç«¯ (é€‚é… MVP 1.2 æ–°åè®®)
 * æ”¯æŒï¼šæŠ€èƒ½ã€é˜²å¾¡ã€é“å…·æ“ä½œ
 */
public class BattleSystemTestClient {

    private volatile Channel channel;
    private String token;
    private Long userId;
    private String battleId;

    // è¿æ¥çŠ¶æ€ç®¡ç†
    private final AtomicBoolean isConnected = new AtomicBoolean(false);
    private final AtomicBoolean isInBattle = new AtomicBoolean(false);
    private final AtomicBoolean manualDisconnect = new AtomicBoolean(false);

    // åŸºç¡€å¿ƒè·³
    private ScheduledExecutorService heartbeatScheduler;
    private static final long HEARTBEAT_INTERVAL = 5000;
    private final AtomicInteger heartbeatCounter = new AtomicInteger(0);

    // Netty çº¿ç¨‹ç»„
    private EventLoopGroup group;

    // å®¢æˆ·ç«¯çŠ¶æ€
    private enum ClientState {
        DISCONNECTED, CONNECTED, LOGGED_IN,
        MATCHING, IN_BATTLE, RECONNECTING
    }

    private volatile ClientState currentState = ClientState.DISCONNECTED;

    public static void main(String[] args) {
        BattleSystemTestClient client = new BattleSystemTestClient();
        client.start();
    }

    public void start() {
        Scanner scanner = new Scanner(System.in);

        System.out.println("========================================");
        System.out.println("æˆ˜æ–—ç³»ç»Ÿæµ‹è¯•å®¢æˆ·ç«¯ v1.2 (Data-Driven)");
        System.out.println("========================================");

        // 1. è¾“å…¥Token
        System.out.print("è¯·è¾“å…¥JWT Token: ");
        token = scanner.nextLine().trim();

        // 2. åˆå§‹åŒ–å¿ƒè·³è°ƒåº¦å™¨
        heartbeatScheduler = Executors.newSingleThreadScheduledExecutor();

        // 3. è¿æ¥æœåŠ¡å™¨
        connectToServer();

        try {
            Thread.sleep(1000);

            if (!isConnected.get()) {
                System.out.println("âœ— è¿æ¥æœåŠ¡å™¨å¤±è´¥");
                return;
            }

            // 4. è‡ªåŠ¨ç™»å½•
            sendLogin();

            Thread.sleep(1000);

            // 5. äº¤äº’å¼èœå•
            showMenu(scanner);

        } catch (InterruptedException e) {
            Thread.currentThread().interrupt();
        } finally {
            shutdown();
        }
    }

    private void connectToServer() {
        try {
            if (group != null) {
                group.shutdownGracefully();
            }

            group = new NioEventLoopGroup();
            Bootstrap bootstrap = new Bootstrap();
            bootstrap.group(group)
                    .channel(NioSocketChannel.class)
                    .option(ChannelOption.TCP_NODELAY, true)
                    .option(ChannelOption.SO_KEEPALIVE, true)
                    .option(ChannelOption.CONNECT_TIMEOUT_MILLIS, 5000)
                    .handler(new ChannelInitializer<SocketChannel>() {
                        @Override
                        protected void initChannel(SocketChannel ch) {
                            ch.pipeline()
                                    .addLast(new ProtobufVarint32FrameDecoder())
                                    .addLast(new ProtobufDecoder(GameMessage.getDefaultInstance()))
                                    .addLast(new ProtobufVarint32LengthFieldPrepender())
                                    .addLast(new ProtobufEncoder())
                                    .addLast(new BattleSystemHandler()); // æ³¨å†ŒHandler
                        }
                    });

            System.out.println("æ­£åœ¨è¿æ¥æœåŠ¡å™¨ localhost:9999 ...");
            ChannelFuture future = bootstrap.connect("localhost", 9999);

            future.addListener((ChannelFutureListener) f -> {
                if (f.isSuccess()) {
                    channel = f.channel();
                    isConnected.set(true);
                    manualDisconnect.set(false);
                    currentState = ClientState.CONNECTED;
                    System.out.println("âœ“ å·²è¿æ¥åˆ°æœåŠ¡å™¨");
                    startHeartbeat();
                } else {
                    System.out.println("âœ— è¿æ¥æœåŠ¡å™¨å¤±è´¥: " + f.cause().getMessage());
                    currentState = ClientState.DISCONNECTED;
                }
            });

            future.sync();

        } catch (Exception e) {
            System.out.println("è¿æ¥å¼‚å¸¸: " + e.getMessage());
            currentState = ClientState.DISCONNECTED;
        }
    }

    private void startHeartbeat() {
        if (heartbeatScheduler != null) {
            heartbeatScheduler.shutdown();
            heartbeatScheduler = Executors.newSingleThreadScheduledExecutor();
        }

        heartbeatScheduler.scheduleAtFixedRate(() -> {
            try {
                if (!isConnected.get() || channel == null || !channel.isActive() || manualDisconnect.get()) {
                    return;
                }
                sendHeartbeat();
            } catch (Exception e) {
                System.err.println("[å¿ƒè·³] å¼‚å¸¸: " + e.getMessage());
            }
        }, 1000, HEARTBEAT_INTERVAL, TimeUnit.MILLISECONDS);
    }

    // === å‘é€æ¶ˆæ¯æ–¹æ³• ===

    private void sendLogin() {
        GameMessage msg = GameMessage.newBuilder()
                .setType(MessageType.LOGIN)
                .setToken(token)
                .build();
        channel.writeAndFlush(msg);
        System.out.println("â†’ å‘é€ç™»å½•æ¶ˆæ¯");
    }

    private void sendHeartbeat() {
        heartbeatCounter.incrementAndGet();
        GameMessage msg = GameMessage.newBuilder()
                .setType(MessageType.HEARTBEAT)
                .setHeartbeat(Heartbeat.newBuilder().setTimestamp(System.currentTimeMillis()).build())
                .build();
        channel.writeAndFlush(msg);
    }

    private void sendMatchRequest() {
        if (currentState != ClientState.LOGGED_IN) {
            System.out.println("âœ— è¯·å…ˆç™»å½•");
            return;
        }
        currentState = ClientState.MATCHING;
        GameMessage msg = GameMessage.newBuilder()
                .setType(MessageType.MATCH_REQUEST)
                .setMatchRequest(MatchRequest.newBuilder().setUserId(userId).build())
                .build();
        channel.writeAndFlush(msg);
        System.out.println("â†’ å‘é€åŒ¹é…è¯·æ±‚");
    }

    private void sendBattleReady() {
        if (battleId == null) {
            System.out.println("âœ— æœªåŒ¹é…");
            return;
        }
        GameMessage msg = GameMessage.newBuilder()
                .setType(MessageType.BATTLE_READY)
                .setBattleReadyRequest(BattleReadyRequest.newBuilder().setBattleId(battleId).setUserId(userId).build())
                .build();
        channel.writeAndFlush(msg);
        System.out.println("â†’ å‘é€æˆ˜æ–—å‡†å¤‡");
    }

    private void sendBattleAction(Scanner scanner) {
        if (!isInBattle.get()) {
            System.out.println("âœ— æˆ˜æ–—æœªå¼€å§‹");
            return;
        }

        System.out.println("\n=== é€‰æ‹©æ“ä½œ ===");
        System.out.println("1. é‡Šæ”¾æŠ€èƒ½");
        System.out.println("2. é˜²å¾¡ (æœ¬å›åˆå‡ä¼¤)");
        System.out.println("3. ä½¿ç”¨é“å…·");
        System.out.print("è¯·é€‰æ‹© > ");

        try {
            int typeChoice = Integer.parseInt(scanner.nextLine().trim());
            int actionType;
            int paramId = 0;

            switch (typeChoice) {
                case 1: // æŠ€èƒ½
                    actionType = 1;
                    System.out.println("æŠ€èƒ½åˆ—è¡¨(DB): 1=æ™®æ”», 2=é‡å‡», 3=æ²»ç–—");
                    System.out.print("è¾“å…¥æŠ€èƒ½ID > ");
                    paramId = Integer.parseInt(scanner.nextLine().trim());
                    break;
                case 2: // é˜²å¾¡
                    actionType = 2;
                    System.out.println("å³å°†è¿›å…¥é˜²å¾¡çŠ¶æ€...");
                    paramId = 0; // é˜²å¾¡æ— éœ€å‚æ•°
                    break;
                case 3: // é“å…·
                    actionType = 3;
                    System.out.println("é“å…·åˆ—è¡¨(DB): 1=ç”Ÿå‘½è¯æ°´(50), 2=å¼ºåŠ›è¯æ°´(100)");
                    System.out.print("è¾“å…¥é“å…·ID > ");
                    paramId = Integer.parseInt(scanner.nextLine().trim());
                    break;
                default:
                    System.out.println("æ— æ•ˆé€‰æ‹©");
                    return;
            }

            // æ„å»ºæ–°åè®®çš„è¯·æ±‚
            BattleActionRequest request = BattleActionRequest.newBuilder()
                    .setBattleId(battleId)
                    .setUserId(userId)
                    .setActionType(actionType)
                    .setParamId(paramId)
                    .build();

            GameMessage msg = GameMessage.newBuilder()
                    .setType(MessageType.BATTLE_ACTION)
                    .setBattleActionRequest(request)
                    .build();

            channel.writeAndFlush(msg);
            System.out.printf("â†’ å‘é€æ“ä½œ: Type=%d, Param=%d%n", actionType, paramId);

        } catch (NumberFormatException e) {
            System.out.println("è¾“å…¥æ ¼å¼é”™è¯¯");
        }
    }

    private void sendSurrender() {
        if (!isInBattle.get()) return;
        GameMessage msg = GameMessage.newBuilder()
                .setType(MessageType.BATTLE_SURRENDER)
                .setBattleSurrenderRequest(BattleSurrenderRequest.newBuilder().setBattleId(battleId).setUserId(userId).build())
                .build();
        channel.writeAndFlush(msg);
        System.out.println("â†’ æŠ•é™");
    }

    private void sendRejoin() {
        GameMessage msg = GameMessage.newBuilder()
                .setType(MessageType.BATTLE_REJOIN)
                .setBattleRejoinRequest(BattleRejoinRequest.newBuilder().setUserId(userId).build())
                .build();
        channel.writeAndFlush(msg);
        System.out.println("â†’ å‘é€é‡è¿è¯·æ±‚");
    }

    // === èœå•ä¸è¾…åŠ© ===

    private void showMenu(Scanner scanner) {
        while (true) {
            System.out.println("\n========== èœå• ==========");
            System.out.println("çŠ¶æ€: " + currentState + (battleId != null ? " | BattleID: " + battleId : ""));
            System.out.println("1. è¯·æ±‚åŒ¹é…");
            System.out.println("2. æˆ˜æ–—å‡†å¤‡");
            System.out.println("3. æˆ˜æ–—è¡ŒåŠ¨ (æŠ€èƒ½/é˜²å¾¡/é“å…·)");
            System.out.println("4. æŠ•é™");
            System.out.println("5. æ–­çº¿é‡è¿");
            System.out.println("6. æ¨¡æ‹Ÿæ–­ç½‘");
            System.out.println("7. æ¨¡æ‹Ÿæ¢å¤ç½‘ç»œ");
            System.out.println("0. é€€å‡º");
            System.out.println("==========================");
            System.out.print("> ");

            String choice = scanner.nextLine().trim();
            switch (choice) {
                case "1": sendMatchRequest(); break;
                case "2": sendBattleReady(); break;
                case "3": sendBattleAction(scanner); break;
                case "4": sendSurrender(); break;
                case "5": sendRejoin(); break;
                case "6": simulateDisconnect(); break;
                case "7": simulateReconnect(); break;
                case "0": shutdown(); return;
                default: System.out.println("æ— æ•ˆæŒ‡ä»¤");
            }

            try { Thread.sleep(200); } catch (Exception e) {}
        }
    }

    private void simulateDisconnect() {
        if (channel != null) channel.close();
        isConnected.set(false);
        currentState = ClientState.DISCONNECTED;
        System.out.println("âš  å·²æ–­å¼€è¿æ¥");
    }

    private void simulateReconnect() {
        manualDisconnect.set(false);
        connectToServer();
        try { Thread.sleep(1000); } catch (Exception e) {}
        if (isConnected.get()) sendLogin();
    }

    private void shutdown() {
        if (heartbeatScheduler != null) heartbeatScheduler.shutdownNow();
        if (channel != null) channel.close();
        if (group != null) group.shutdownGracefully();
        System.out.println("å®¢æˆ·ç«¯é€€å‡º");
    }

    /**
     * å†…éƒ¨Handlerç±»
     */
    private class BattleSystemHandler extends SimpleChannelInboundHandler<GameMessage> {
        @Override
        protected void channelRead0(ChannelHandlerContext ctx, GameMessage msg) {
            switch (msg.getType()) {
                case LOGIN:
                    if (msg.getLoginResponse().getSuccess()) {
                        userId = msg.getLoginResponse().getUserId();
                        currentState = ClientState.LOGGED_IN;
                        System.out.println("âœ“ ç™»å½•æˆåŠŸ, ID: " + userId);
                    } else {
                        System.out.println("âœ— ç™»å½•å¤±è´¥: " + msg.getLoginResponse().getMessage());
                    }
                    break;
                case MATCH_SUCCESS:
                    battleId = msg.getMatchSuccessResponse().getBattleId();
                    System.out.println("â˜… åŒ¹é…æˆåŠŸ! å¯¹æ‰‹: " + msg.getMatchSuccessResponse().getOpponent().getNickname());
                    System.out.println("è¯·æŒ‰ 2 å‘é€å‡†å¤‡");
                    break;
                case BATTLE_START:
                    isInBattle.set(true);
                    currentState = ClientState.IN_BATTLE;
                    System.out.println("âš” æˆ˜æ–—å¼€å§‹!");
                    System.out.println("å…ˆæ‰‹ID: " + msg.getBattleStartResponse().getCurrentActorUserId());
                    if (msg.getBattleStartResponse().getCurrentActorUserId() == userId) {
                        System.out.println("ğŸ‘‰ è½®åˆ°ä½ äº†ï¼è¯·æŒ‰ 3 è¡ŒåŠ¨");
                    }
                    break;
                case BATTLE_UPDATE:
                    BattleUpdateResponse update = msg.getBattleUpdateResponse();
                    System.out.println("\n>>> å›åˆ " + update.getCurrentRound() + " <<<");
                    System.out.println(update.getDescription());
                    System.out.printf("P1è¡€é‡: %d/%d, P2è¡€é‡: %d/%d%n",
                            update.getPlayer1().getCurrentHp(), update.getPlayer1().getMaxHp(),
                            update.getPlayer2().getCurrentHp(), update.getPlayer2().getMaxHp());

                    if (update.getNextActorUserId() == userId) {
                        System.out.println("ğŸ‘‰ è½®åˆ°ä½ äº†ï¼è¯·æŒ‰ 3 è¡ŒåŠ¨");
                    } else {
                        System.out.println("â³ ç­‰å¾…å¯¹æ‰‹è¡ŒåŠ¨...");
                    }
                    break;
                case BATTLE_END:
                    isInBattle.set(false);
                    currentState = ClientState.LOGGED_IN;
                    battleId = null;
                    System.out.println("\nğŸ æˆ˜æ–—ç»“æŸ");
                    System.out.println("åŸå› : " + msg.getBattleEndResponse().getEndReason());
                    System.out.println("èµ¢å®¶ID: " + msg.getBattleEndResponse().getWinnerId());
                    break;
                case BATTLE_REJOIN_RESPONSE:
                    if (msg.getBattleRejoinResponse().getSuccess()) {
                        System.out.println("âœ“ é‡è¿æˆåŠŸï¼Œæ¢å¤æˆ˜æ–—çŠ¶æ€");
                        battleId = msg.getBattleRejoinResponse().getBattleId();
                        isInBattle.set(true);
                        currentState = ClientState.IN_BATTLE;
                    } else {
                        System.out.println("âœ— é‡è¿å¤±è´¥: " + msg.getBattleRejoinResponse().getMessage());
                    }
                    break;
                case HEARTBEAT:
                    // å¿½ç•¥å¿ƒè·³å›åŒ…æ—¥å¿—ï¼Œé¿å…åˆ·å±
                    break;
                default:
                    System.out.println("æ”¶åˆ°æœªçŸ¥æ¶ˆæ¯: " + msg.getType());
            }
        }
    }
}